--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-  
-  
+  <div>
+    <blockquote>"It does not matter how slowly you go as long as you do not stop."</blockquote>
+    <p>Confusius</p>
+  </div>
 </body>
 </html>
