add new files, project done

--- a/de.html
+++ b/de.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <link rel="stylesheet" type="text/css" href="main.css">
   <meta charset="utf-8">
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div class="quote">
-    <blockquote>"It does not matter how slowly you go as long as you do not stop."</blockquote>
-    <p class="author">- Confusius -</p>
+    <blockquote>"Es ist nicht wichtig, wie langsam du gehst, sofern du nicht stehen bleibst."</blockquote>
+    <p class="author">- Konfuzius -</p>
   </div>
   <div class="languages">
-    <p>In other languages</p>
+    <p>In anderen Sprachen</p>
     <p class="flag">
       <a href="en.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
       <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
@@ -21,4 +21,4 @@
     </p>
   </div>
 </body>
-–</html>
+</html>
