--- a/fi.html
+++ b/fi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
   <link rel="stylesheet" type="text/css" href="main.css">
   <meta charset="utf-8">
@@ -8,17 +8,17 @@
 </head>
 <body>
   <div class="quote">
-    <blockquote>"It does not matter how slowly you go as long as you do not stop."</blockquote>
-    <p class="author">- Confusius -</p>
+    <blockquote>"Sillä ei ole väliä kuinka hitaasti mennään niin kauan kuin et lopeta."</blockquote>
+    <p class="author">- Kungfutse -</p>
   </div>
   <div class="languages">
-    <p>In other languages</p>
+    <p>Muilla kielillä</p>
     <p class="flag">
       <a href="en.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
-      <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
+      <a href="de.html"> <img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
       <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
-      <a href="fi.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
+      <a href="de.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
     </p>
   </div>
 </body>
-–</html>
+</html>
