--- a/de.html
+++ b/de.html
@@ -14,8 +14,7 @@
   <div class="languages">
     <p>In anderen Sprachen</p>
     <p class="flag">
-      <a href="en.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
-      <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
+      <a href="index.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
       <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
       <a href="fi.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
     </p>
