--- a/fi.html
+++ b/fi.html
@@ -14,10 +14,9 @@
   <div class="languages">
     <p>Muilla kielillä</p>
     <p class="flag">
-      <a href="en.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
+      <a href="index.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
       <a href="de.html"> <img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
       <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
-      <a href="de.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
     </p>
   </div>
 </body>
