--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="quote">
     <blockquote>"It does not matter how slowly you go as long as you do not stop."</blockquote>
-    <p class="author">- Confusius -</p>
+    <p class="author">- Confucius -</p>
   </div>
   <div class="languages">
     <p>In other languages</p>
@@ -20,4 +20,4 @@
     </p>
   </div>
 </body>
-–</html>
+</html>
