add finally motifications

--- a/de.html
+++ b/de.html
@@ -12,11 +12,12 @@
     <p class="author">- Konfuzius -</p>
   </div>
   <div class="languages">
-    <p>In anderen Sprachen</p>
-    <p class="flag">
-      <a href="index.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
-      <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
-      <a href="fi.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
+      <p>In anderen Sprachen</p>
+      <p class="flag">
+        <a href="index.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
+        <span><img class="current-language" src="assets/germany.png" alt="Germany"></span>
+        <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
+        <a href="fi.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
     </p>
   </div>
 </body>
