--- a/fi.html
+++ b/fi.html
@@ -12,11 +12,12 @@
     <p class="author">- Kungfutse -</p>
   </div>
   <div class="languages">
-    <p>Muilla kielillä</p>
-    <p class="flag">
-      <a href="index.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
-      <a href="de.html"> <img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
-      <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
+      <p>Muilla kielillä</p>
+      <p class="flag">
+        <a href="index.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
+        <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany"></a>
+        <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
+       <span><img class="current-language" src="assets/finland.png" alt="Finland"></span>
     </p>
   </div>
 </body>
