--- a/hu.html
+++ b/hu.html
@@ -12,10 +12,11 @@
     <p class="author">- Konfuciusz -</p>
   </div>
   <div class="languages">
-    <p>Más nyelveken</p>
-    <p class="flag">
+      <p>Más nyelveken</p>
+      <p class="flag">
       <a href="index.html"><img class="nation-pictures" src="assets/united-kingdom.png" alt="United Kingdom"></a>
-      <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
+      <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany"></a>
+      <span><img class="current-language" src="assets/hungary.png" alt="Hungary"></span>
       <a href="fi.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
     </p>
   </div>
