--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <p class="author">- Confucius -</p>
   </div>
   <div class="languages">
-    <p>In other languages</p>
-    <p class="flag">
-      <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany" ></a>
+     <p>In other languages</p>
+      <p class="flag">
+      <span><img class="current-language" src="assets/united-kingdom.png" alt="United Kingdom"></span>
+      <a href="de.html"><img class="nation-pictures" src="assets/germany.png" alt="Germany"></a>
       <a href="hu.html"> <img class="nation-pictures" src="assets/hungary.png" alt="Hungary"></a>
       <a href="fi.html"><img class="nation-pictures" src="assets/finland.png" alt="Finland"></a>
     </p>
